--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -4,7 +4,7 @@
     --secondary: ;
     --light: #f0f0f0;
     --dark: #2b2b2b;
-    --text1: #b31e6f;
+    --secondary: #883b7e;
 }
 
 * {
@@ -17,6 +17,7 @@ body,
 html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    overflow-x: hidden;
 }
 
 
@@ -50,8 +51,16 @@ a:visited {
 .line {
     width: 70px;
     height: 2px;
-    background-color: var(--text1);
+    background-color: var(--secondary);
     margin: auto;
+}
+
+.grid {
+    display: grid;
+}
+
+.grid-default {
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
 
 
@@ -79,7 +88,7 @@ a:visited {
 }
 
 .callout .icons a:hover {
-    color: var(--text1);
+    color: var(--secondary);
     transition: 0.3s;
 }
 
@@ -92,7 +101,7 @@ a:visited {
 .callout .brand .content {
     font-weight: bold;
     font-size: 1.2rem;
-    color: var(--text1);
+    color: var(--secondary);
 }
 
 .banner {
@@ -125,7 +134,7 @@ a:visited {
 }
 
 .showcase .navigation ul li:hover {
-    background-color: var(--text1);
+    background-color: var(--secondary);
     transition: 0.2s;
 }
 
@@ -134,7 +143,7 @@ a:visited {
 }
 
 .active {
-    background-color: var(--text1);
+    background-color: var(--secondary);
     border-right: 1px solid var(--primary);
 }
 
@@ -172,7 +181,7 @@ a:visited {
 }
 
 .action .button-group .contact-us {
-    background-color: var(--text1);
+    background-color: var(--secondary);
     color: white;
 }
 
@@ -211,7 +220,7 @@ a:visited {
 }
 
 .about .cards .card2 {
-    background: linear-gradient(rgba(179, 30, 111, 0.95), rgba(179, 30, 111, 0.95)), url('../IMG/flower.jpg');
+    background: linear-gradient(rgba(136, 59, 126, 0.9), rgba(136, 59, 126, 0.9)), url('../IMG/flower.jpg');
 }
 
 .about .cards .card .content {
@@ -257,3 +266,61 @@ a:visited {
 
 
 /* End of About */
+
+
+/* Industries*/
+
+.industries {
+    background-color: var(--secondary);
+    padding: 10px 0px;
+    color: white;
+}
+
+.industries .header {
+    font-size: 2rem;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.industries .content {
+    width: 85%;
+    margin: 30px auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.industries .line {
+    background-color: white;
+}
+
+.industries .tab {
+    border: 1px solid white;
+    min-height: 30vh;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.industries .tab .icon {
+    border-radius: 100%;
+    width: 60px;
+    height: 60px;
+    border: 2px solid white;
+    padding: 10px;
+    margin: auto;
+}
+
+.industries .tab .header {
+    margin: 10px auto;
+    font-weight: bold;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.industries .tab .caption {
+    margin: 10px auto;
+    font-size: 0.9rem;
+    text-align: center;
+}
+
+
+/* End of Industries */
