--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -60,7 +60,7 @@ a:visited {
 }
 
 .grid-preset {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .header-preset {
@@ -98,7 +98,7 @@ a:visited {
 }
 
 .callout .icons a:hover {
-    color: var(--secondary);
+    color: orange;
     transition: 0.3s;
 }
 
@@ -329,6 +329,7 @@ a:visited {
     margin: 10px auto;
     font-size: 0.9rem;
     text-align: center;
+    line-height: 1.6;
 }
 
 .services {
@@ -398,3 +399,78 @@ a:visited {
 
 
 /* End of Staff */
+
+
+/* Partners */
+
+.partners {
+    padding: 20px;
+}
+
+.partners .content {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px 1fr));
+}
+
+.partners .content .tab {
+    min-height: 30vh;
+}
+
+.footer {
+    padding: 20px 0px;
+    background: linear-gradient(rgba(136, 59, 126, 0.9), rgba(136, 59, 126, 0.9)), url('../IMG/flower.jpg');
+}
+
+.footer .content {
+    margin: 20px auto;
+    width: 80%;
+    grid-template-columns: repeat(auto-fit, minmax(300px 1fr));
+    color: white;
+}
+
+.footer .content .tab {
+    border: 1px solid black;
+    min-height: 40vh;
+    padding: 0px 20px;
+}
+
+.footer .content .tab1 .header {
+    font-size: 1.3rem;
+    margin: 0px 0px 20p 0px;
+}
+
+.footer .content .tab2 .header,
+.footer .content .tab3 .header {
+    font-size: 1.3rem;
+    margin: 0px 0px 10px 0px;
+}
+
+.footer .content .tab1 .address,
+.footer .content .tab1 .call {
+    margin: 20px 0px;
+    font-size: 0.9rem;
+    line-height: 1.6;
+    color: var(--light);
+}
+
+.footer .content .tab2 .links {
+    margin: 20px 0px;
+}
+
+.footer .content .tab2 .links ul li {
+    list-style: none;
+    padding: 10px 20px;
+}
+
+.footer .content .tab2 .links ul li a {
+    color: var(--light);
+    transition: 0.3s;
+}
+
+.footer .content .tab2 .links ul li a:hover {
+    color: orange;
+    transition: 0.3s;
+}
+
+
+/* End of Partners */
