--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -18,6 +18,7 @@ html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 
@@ -122,7 +123,6 @@ a:visited {
 /* Showcase */
 
 .showcase {
-    border: 1px solid black;
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../IMG/us.jpg');
 }
 
@@ -371,7 +371,7 @@ a:visited {
 /* Staff */
 
 .staff {
-    background-color: #bdbdbd;
+    background-color: #e0e0e0;
     padding: 20px;
 }
 
@@ -429,7 +429,6 @@ a:visited {
 }
 
 .footer .content .tab {
-    border: 1px solid black;
     min-height: 40vh;
     padding: 0px 20px;
 }
@@ -446,7 +445,8 @@ a:visited {
 }
 
 .footer .content .tab1 .address,
-.footer .content .tab1 .call {
+.footer .content .tab1 .call,
+.footer .content .tab3 .caption {
     margin: 20px 0px;
     font-size: 0.9rem;
     line-height: 1.6;
@@ -470,6 +470,30 @@ a:visited {
 .footer .content .tab2 .links ul li a:hover {
     color: orange;
     transition: 0.3s;
+}
+
+.footer .content .tab3 .form {
+    margin: 10px 0px;
+    width: 200px;
+}
+
+.form input {
+    width: 100%;
+    padding: 17px 10px;
+    border: 0;
+    color: white;
+    margin: 2px 0px;
+}
+
+.form input[type="text"],
+.form input[type="email"] {
+    background-color: var(--dark);
+    color: white;
+}
+
+.form input[type="submit"] {
+    background-color: #532953;
+    color: white;
 }
 
 
