--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -1,10 +1,9 @@
 :root {
     /* Colours */
-    --primary: #364f6b;
-    --secondary: ;
+    --secondary: #2cb978;
+    --primary: #83e85a;
     --light: #f0f0f0;
     --dark: #2b2b2b;
-    --secondary: #883b7e;
 }
 
 * {
@@ -79,7 +78,7 @@ a:visited {
 
 .callout {
     min-height: 10vh;
-    background-color: var(--light);
+    background-color: var(--secondary);
     display: grid;
     grid-template-columns: auto 200px 150px;
 }
@@ -166,7 +165,7 @@ a:visited {
 }
 
 .showcase .navigation a {
-    color: white;
+    color: var(--dark);
 }
 
 .active {
@@ -208,8 +207,8 @@ a:visited {
 }
 
 .action .button-group .contact-us {
-    background-color: var(--secondary);
-    color: white;
+    background-color: #ffd615;
+    color: var(--dark);
 }
 
 
@@ -244,10 +243,11 @@ a:visited {
     display: flex;
     align-items: center;
     padding: 20px;
+    color: var(--dark);
 }
 
 .about .cards .card2 {
-    background: linear-gradient(rgba(136, 59, 126, 0.9), rgba(136, 59, 126, 0.9)), url('../IMG/flower.jpg');
+    background: linear-gradient(rgba(131, 232, 90, 0.95), rgba(131, 232, 90, 0.95)), url('../IMG/flower.jpg');
 }
 
 .about .cards .card .content {
@@ -255,7 +255,7 @@ a:visited {
 }
 
 .about .cards .card .content .icon {
-    border: 2px solid black;
+    border: 2px solid var(--dark);
     border-radius: 100%;
     width: 80px;
     height: 80px;
@@ -283,14 +283,6 @@ a:visited {
     line-height: 1.6;
 }
 
-.about .cards .card2 {
-    color: white;
-}
-
-.about .cards .card2 .icon {
-    border: 2px solid white;
-}
-
 
 /* End of About */
 
@@ -298,9 +290,9 @@ a:visited {
 /* Industries*/
 
 .industries {
-    background-color: var(--secondary);
+    background-color: var(--primary);
     padding: 10px 0px;
-    color: white;
+    color: var(--dark);
 }
 
 .industries .header {
@@ -316,7 +308,7 @@ a:visited {
 }
 
 .industries .line {
-    background-color: white;
+    background-color: var(--dark);
 }
 
 .industries .tab {
@@ -330,7 +322,7 @@ a:visited {
     border-radius: 100%;
     width: 60px;
     height: 60px;
-    border: 2px solid white;
+    border: 2px solid var(--dark);
     padding: 10px;
     margin: auto;
 }
@@ -410,7 +402,7 @@ a:visited {
 
 .staff .content .tab .badge {
     height: 10vh;
-    background-color: var(--secondary);
+    background-color: grey;
     color: white;
 }
 
@@ -448,14 +440,14 @@ did:hover div {
 
 .footer {
     padding: 20px 0px;
-    background: linear-gradient(rgba(136, 59, 126, 0.9), rgba(136, 59, 126, 0.9)), url('../IMG/flower.jpg');
+    background: linear-gradient(rgba(131, 232, 90, 0.95), rgba(131, 232, 90, 0.95)), url('../IMG/flower.jpg');
 }
 
 .footer .content {
     margin: 20px auto;
     width: 80%;
     grid-template-columns: repeat(auto-fit, minmax(300px 1fr));
-    color: white;
+    color: var(--dark);
 }
 
 .footer .content .tab {
@@ -464,23 +456,25 @@ did:hover div {
 }
 
 .footer .content .tab1 .header {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     margin: 0px 0px 20p 0px;
+    font-weight: bold;
 }
 
 .footer .content .tab2 .header,
 .footer .content .tab3 .header {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     margin: 0px 0px 10px 0px;
+    font-weight: bold;
 }
 
 .footer .content .tab1 .address,
 .footer .content .tab1 .call,
 .footer .content .tab3 .caption {
     margin: 20px 0px;
-    font-size: 0.9rem;
+    font-size: 1rem;
     line-height: 1.6;
-    color: var(--light);
+    color: var(--dark);
 }
 
 .footer .content .tab2 .links {
@@ -493,7 +487,7 @@ did:hover div {
 }
 
 .footer .content .tab2 .links ul li a {
-    color: var(--light);
+    color: #107a8b;
     transition: 0.3s;
 }
 
@@ -522,7 +516,7 @@ did:hover div {
 }
 
 .form input[type="submit"] {
-    background-color: #532953;
+    background-color: #107a8b;
     color: white;
 }
 
@@ -538,7 +532,7 @@ did:hover div {
     }
     .action {
         height: 40vh;
-        padding: 0px 20px;
+        padding: 20px 10px;
     }
     .action .header {
         font-size: 2rem;
@@ -634,13 +628,16 @@ did:hover div {
         display: none;
     }
     /*End of callout */
-    /*
-    .showcase .navigation ul li:hover {
-        background-color: var(--secondary);
-        transition: 0.2s;
+    /*Footer*/
+    .footer .content .tab {
+        min-height: 40vh;
+        padding: 10px 20px;
+        border-top: 1px solid var(--dark);
     }
-    
-    .showcase .navigation a {
-        color: white;
-    }*/
+}
+
+
+/*End of footer*/
+
+
 }
