--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -4,6 +4,8 @@
     --primary: #ffd615;
     --light: #f0f0f0;
     --dark: #2b2b2b;
+    /*Box Shadow */
+    --shadow: 0px 6px 13px #aaaaaa;
 }
 
 * {
@@ -598,6 +600,7 @@ did:hover div {
     .about .cards .card {
         border-radius: 20px;
         margin: 20px;
+        box-shadow: var(--shadow);
     }
     .about .header {
         margin: 10px;
@@ -626,8 +629,8 @@ did:hover div {
         background-color: white;
         border-radius: 20px;
         margin: 20px auto;
-        border: 1px solid black;
         overflow: hidden;
+        box-shadow: var(--shadow);
     }
     .staff .line {
         display: none;
