--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -1,7 +1,8 @@
 :root {
     /* Colours */
     --secondary: #2cb978;
-    --primary: #ffd615;
+    --gold: #ffd615;
+    --primary: #83e85a;
     --light: #f0f0f0;
     --dark: #2b2b2b;
     /*Box Shadow */
@@ -105,14 +106,20 @@ a:visited {
 }
 
 .callout .icons a:hover {
-    color: orange;
+    color: var(--gold);
     transition: 0.3s;
 }
 
 .callout .button a {
     background-color: var(--primary);
-    color: white;
+    color: var(--dark);
     padding: 25px 20px;
+    transition: 0.3s ease-in;
+}
+
+.callout .button :hover {
+    transition: 0.4s;
+    background-color: var(--gold);
 }
 
 .callout .brand .content {
@@ -142,7 +149,8 @@ a:visited {
 /* Showcase */
 
 .showcase {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../IMG/us.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.7)), url('../IMG/us.jpg');
+    border-top: 5px solid var(--primary);
 }
 
 .showcase .navigation {
@@ -164,7 +172,7 @@ a:visited {
 }
 
 .showcase .navigation ul li:hover {
-    background-color: var(--secondary);
+    background-color: var(--primary);
     transition: 0.2s;
 }
 
@@ -173,7 +181,7 @@ a:visited {
 }
 
 .active {
-    background-color: #ffd615;
+    background-color: var(--primary);
     color: var(--dark);
 }
 
@@ -211,7 +219,7 @@ a:visited {
 }
 
 .action .button-group .contact-us {
-    background-color: #ffd615;
+    background-color: var(--primary);
     color: var(--dark);
 }
 
@@ -665,7 +673,7 @@ did:hover div {
     .showcase .navigation ul li {
         padding: 25px 30px;
         text-align: center;
-        border-top: 1px solid var(--secondary);
+        border-top: 1px solid var(--gold);
     }
     /*End of showcase */
     /* Callout */
@@ -701,6 +709,10 @@ did:hover div {
         min-height: 40vh;
         padding: 10px 20px;
         border-top: 1px solid var(--dark);
+    }
+    input,
+    a {
+        border-radius: 4px;
     }
 }
 
