--- a/CSS/newhome.css
+++ b/CSS/newhome.css
@@ -259,7 +259,8 @@ a:visited {
 }
 
 .about .cards .card2 {
-    background: linear-gradient(rgba(131, 232, 90, 0.95), rgba(131, 232, 90, 0.95)), url('../IMG/flower.jpg');
+    background-color: var(--dark);
+    color: var(--light);
 }
 
 .about .cards .card .content {
@@ -273,6 +274,10 @@ a:visited {
     height: 80px;
     padding: 10px;
     margin: auto;
+}
+
+.about .cards .card2 .content .icon {
+    border: 2px solid var(--light);
 }
 
 .about .cards .card .content .icon i {
@@ -302,9 +307,9 @@ a:visited {
 /* Industries*/
 
 .industries {
-    background-color: var(--primary);
+    background-color: var(--dark);
     padding: 10px 0px;
-    color: var(--dark);
+    color: var(--light);
 }
 
 .industries .header {
@@ -334,7 +339,7 @@ a:visited {
     border-radius: 100%;
     width: 60px;
     height: 60px;
-    border: 2px solid var(--dark);
+    border: 2px solid var(--light);
     padding: 10px;
     margin: auto;
 }
